= 1.6.0 =
- Updated: Freemius SDK for better account and license management.
- Fixed: [oceanwp_nav] shortcode mobile menu issue.
- Fixed: Theme Panel > Scripts & Styles - PHP7.4 Warning message after disabling/enabling styles & scripts.

= 1.5.20 =
- Fixed: Menu Icon Library: icon library loading blank.

= 1.5.19 =
- Fixed: Icon issue.
- Fixed: Compatibility with WP5.3

= 1.5.18 =
- Fixed: Fatal Error.

= 1.5.17 =
- Added: Updated to FontAwesome-5 to fix the version conflict.

= 1.5.16 =
- New: Added white-labeling capabilities for client installations.

= 1.5.15 =
- Fix: Fixed the WP Cron jobs issue.

= 1.5.14 =
- Update: Added special logging and troubleshooting for the migration logic.

= 1.5.13 =
- Fixed: Free label in Freemius.

= 1.5.12 =
- Fixed: Security issue.

= 1.5.11 =
- Added: Important codes for the Freemius switch.

= 1.5.10 =
- Fixed: Errors issue with the updater.php file.

= 1.5.8 =
- Tweak: Gutenberg support removed for the My Library post type to avoid conflict with Ocean Hooks.

= 1.5.7 =
- Added: Gutenberg support.

= 1.5.6 =
- Added: Some codes for an upcoming release.

= 1.5.5 =
- Tweak: Small improvement on the setup wizard.

= 1.5.4 =
- Tweak: Import demo improved.

= 1.5.3 =
- Fixed: White screen error with older PHP version.

= 1.5.2 =
- Fixed: White screen error.

= 1.5.1 =
- Added: Meta tags directly added to this plugin as it is not allowed in a theme.

= 1.5.0 =
- Added: Setup Wizard to help you to create very easily your website.
- Tweak: You can now select a post type for the [oceanwp_search] shortcode.
- Tweak: The WooCommerce shortcodes take into account the taxes calculation if activated.
- Fixed: Import issue with the contact form of the demos.
- Fixed: WPML issue to translate pages.
- Fixed: The MailChimp and Social Share JS files are now only loaded if the widgets are used on a post.
- Removed: First box in Theme Panel sidebar.

= 1.4.29 =
- Tweak: Some tweaks for an upcoming big update.

= 1.4.28 =