@@ -446,7 +446,7 @@ final class Ocean_Extra {
 			&& is_product_category() ) {
 		    global $wp_query;
 		    $cat = $wp_query->get_queried_object();
-		    $thumbnail_id = get_woocommerce_term_meta( $cat->term_id, 'thumbnail_id', true );
+		    $thumbnail_id = get_term_meta( $cat->term_id, 'thumbnail_id', true );
 		    $get_image = wp_get_attachment_url( $thumbnail_id );
 		    if ( $get_image ) {
 				$image = $get_image;
